--- a/page1.html
+++ b/page1.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Maryland State Website: Capital Page</title>
+        <title>Website Template: Second Page</title>
         <link href="styles.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
               rel="stylesheet" crossorigin="anonymous"
